-----------------------------
 Change history for MATPOWER
-----------------------------

Version:    5.0

maintained by Ray Zimmerman <rz10@cornell.edu>

MATPOWER
$Id$
Copyright (c) 1996-2014 by Power System Engineering Research Center (PSERC)
See http://www.pserc.cornell.edu/matpower/ for more info.


Changes since 5.0
-----------------

2/6/15
    - Modified nested_struct_copy() to eliminate cellfun() call that
      was not supported in Matlab 7.0.x. Noted that runcpf() also
      requires Matlab 7.1 or later due to a call to cellfun().
      Included code to skip certain tests that require that cellfun()
      functionality when running under Matlab 7.0.x.

2/5/15
    - Replaced regexp(... 'split') construct in mpoption() with
      regexp(... 'tokens') since it was causing fatal errors on
      Matlab versions < 7.3, which did not have that feature.
    - Fixed fatal error in when using fast-decoupled power flow
      on Matlab versions < 7.3, caused by use of newer
      lu(... 'vector') construct.

2/3/15
    - Added check to have_fcn() for installation of ipopt_auxdata.m
      when Ipopt >= 3.11.x is detected, to warn about incomplete
      installation and avoid a fatal error.

1/26/15
    - Fixed bug in hasPQcap() that resulted in ignoring generator
      capability curves if Q1MAX < Q2MAX or Q1MIN > Q2MIN (i.e. when
      the sloped portions cut off the left corners of the box
      constraints, rather than the right corners).
      Thanks to Irina Boiarchuk.

1/23/15
    - Added mosek_symbcon() to define symbolic constants for setting
      MOSEK options. Updated MOSEK solver option values in help text
      for mpoption() to correspond to MOSEK v7.

1/22/15
    - Added ability to toggle the availability of optional functionality
      using have_fcn().

1/21/15
    - Fixed minor bug with poly2pwl(), affecting units with Pmax <= 0.
    - Major update to have_fcn(), which now determines and caches